--- a/Day3/array.html
+++ b/Day3/array.html
@@ -19,10 +19,10 @@
             var list="";
             for(var i=0;i<comments.length;i++)
             {
-                list += `<li> +  ${comments[i]} + </li>`;
+                list += `<li> ${comments[i]}</li>`;
             }
-        console.log(list);
-document.getElementById("list1").innerHTML ==list;
+        
+document.getElementById("list1").innerHTML =list;
         }
         comments = [];
 
