--- a/DAy4/index.html
+++ b/DAy4/index.html
@@ -12,6 +12,13 @@
   
     <button type="button" id="btnInsert"> Insert Record </button>
   <!-- <script src="script1.js"></script>   -->
-  <script src="script2.js"></script> 
+  <!-- <script src="script2.js"></script>  -->
+  <!-- <script src="script3.js"></script>  -->
+  <h1> List of Students</h1>
+  <ol id="list"> </ol>
+  <!-- <script src="script4.js"></script>  -->
+  <script src="script5.js"></script> 
+
+
 </body>
 </html>
