--- a/DAy4/index.html
+++ b/DAy4/index.html
@@ -17,8 +17,10 @@
   <h1> List of Students</h1>
   <ol id="list"> </ol>
   <!-- <script src="script4.js"></script>  -->
-  <script src="script5.js"></script> 
+  <!-- <script src="script5.js"></script>  -->
 
+  <!-- <script src="script6.js"></script>  -->
 
+<script src="script9.js"></script>
 </body>
 </html>
