--- a/DAy4/index.html
+++ b/DAy4/index.html
@@ -21,6 +21,8 @@
 
   <!-- <script src="script6.js"></script>  -->
 
-<script src="script11.js"></script>
+<!-- <script src="script11.js"></script> -->
+
+<script src="oops.js"></script>
 </body>
 </html>
